2010-05-27  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #14456: SQL parser doesn't accept ALTER TABLE statement without CHANGE, DROP or ADD keyword
	* Fixed bug #14457: 1-2-3 Install Process breaks with PostgreSQL

2010-05-21  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #14372: Mapping does not work with table alias
	* Follow-up of changeset 32847: DBAL cannot be loaded if typo3conf/ is not writable

2010-05-03  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed 1-2-3 installer crash when having only mysql available

2010-05-01  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #14274: Some exception are not caught when trying to install DBAL in 1-2-3 Install Tool process
	* Fixed bug #2186: Error installing static_info_tables
	* Fixed bug #14265: Driver dropdown in install tool should be hidden when only MySQL is available

2010-04-29  Xavier Perseguers  <typo3@perseguers.ch>

	* Added autoloader for Install Tool

2010-04-22  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #14182: Multiple join conditions are not supported

2010-04-15  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #14120: Add a method to check if database is connected

2010-04-14  Xavier Perseguers  <typo3@perseguers.ch>

	* Set version to 1.1.2

2010-04-12  Xavier Perseguers  <typo3@perseguers.ch>

	* Added feature #13508: Use exec_TRUNCATEquery() instead of DELETE FROM throughout the core

2010-03-07  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #4640: Backend login impossible with MSSQL via ODBC (thanks to Felix Eckhofer)

2010-02-21  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #2367: No support for LIMIT [PostgreSQL]

2010-02-14  Xavier Perseguers  <typo3@perseguers.ch>

	* Set version to 1.1.1

2010-02-14  Xavier Perseguers  <typo3@perseguers.ch>

	* Added unit test for #12829: ALTER TABLE is not able to parse length restriction in index creation

2010-02-13  Xavier Perseguers  <typo3@perseguers.ch>
