@@ -301,6 +301,7 @@ class ux_t3lib_sqlparser extends t3lib_sqlparser {
 					case 'ADDUNIQUE':
 						$query .= ' (' . implode(',', $components['fields']) . ')';
 						break;
+					case 'DEFAULTCHARACTERSET':
 					case 'ENGINE':
 						// ??? todo!
 						break;
